--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint --fix",
+    "lint:html": "htmlhint \"src/**/*.html\" --nocolor",
     "lint:styles": "stylelint \"src/**/*.scss\" -f verbose --fix"
   },
   "private": true,
@@ -41,6 +42,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
+    "htmlhint": "0.15.1",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
     "typescript": "4.2.4"
