--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint --fix",
+    "lint": "npm-run-all --parallel lint:*",
     "lint:html": "htmlhint \"src/**/*.html\" --nocolor",
-    "lint:styles": "stylelint \"src/**/*.scss\" -f verbose --fix"
+    "lint:scss": "stylelint \"src/**/*.scss\" -f verbose --fix",
+    "lint:ts": "ng lint --fix"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +44,7 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "htmlhint": "0.15.1",
+    "npm-run-all": "4.1.5",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
     "typescript": "4.2.4"
