--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/jest": "12.1.0",
     "@angular-devkit/build-angular": "12.0.5",
     "@angular-eslint/builder": "12.2.0",
     "@angular-eslint/eslint-plugin": "12.2.0",
@@ -44,6 +45,7 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "htmlhint": "0.15.1",
+    "jest": "27.0.5",
     "npm-run-all": "4.1.5",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
