--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "prebuild": "npm-run-all prebuild:*",
+    "prebuild:lint": "npm-run-all lint",
+    "prebuild:test": "npm-run-all test",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -24,6 +27,7 @@
     "@angular/platform-browser": "12.0.5",
     "@angular/platform-browser-dynamic": "12.0.5",
     "@angular/router": "12.0.5",
+    "@material/list": "11.0.0",
     "bootstrap": "5.0.2",
     "rxjs": "6.6.7",
     "tslib": "2.3.0",
