--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular-eslint/template-parser": "12.2.0",
     "@angular/cli": "12.0.5",
     "@angular/compiler-cli": "12.0.5",
+    "@angular/language-service": "12.1.0",
     "@types/jest": "26.0.23",
     "@types/node": "12.20.15",
     "@typescript-eslint/eslint-plugin": "4.28.0",
