--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
-    "lib": ["es2018", "dom"]
+    "lib": ["es2018", "dom"],
+    "plugins": [{ "name": "@angular/language-service" }]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
