--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "htmlhint": "0.15.1",
     "jest": "27.0.6",
     "npm-run-all": "4.1.5",
+    "prettier": "2.3.2",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
     "typescript": "4.2.4"
