--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@angular/platform-browser-dynamic": "12.1.0",
     "@angular/router": "12.1.0",
     "@material/list": "11.0.0",
+    "@ngrx/store": "12.1.0",
+    "@ngrx/store-devtools": "12.1.0",
     "bootstrap": "5.0.2",
     "rxjs": "6.6.7",
     "tslib": "2.3.0",
+    "uuid": "8.3.2",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
@@ -46,6 +49,7 @@
     "@angular/language-service": "12.1.0",
     "@types/jest": "26.0.23",
     "@types/node": "12.20.15",
+    "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "4.28.1",
     "@typescript-eslint/parser": "4.28.1",
     "eslint": "7.29.0",
