--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
+    "eslint-plugin-unused-imports": "1.1.2",
     "htmlhint": "0.15.1",
     "jest": "27.0.6",
+    "jest-preset-angular": "9.0.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.3.2",
     "stylelint": "13.13.1",
