--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/store": "12.2.0",
     "@ngrx/store-devtools": "12.2.0",
     "bootstrap": "5.0.2",
+    "express": "4.17.1",
     "rxjs": "6.6.7",
     "tslib": "2.3.0",
     "uuid": "8.3.2",
@@ -65,5 +66,9 @@
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
     "typescript": "4.3.5"
+  },
+  "engines": {
+    "node": "12.18.3",
+    "npm": "7.19.1"
   }
 }
