--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contacts",
-  "version": "1.0.0-DEV",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,6 +8,8 @@
     "prebuild:lint": "npm-run-all lint",
     "prebuild:test": "npm-run-all test",
     "build": "ng build",
+    "postbuild": "npm-run-all postbuild:*",
+    "postbuild:replace": "node ./tools/node/replace.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "npm-run-all --parallel lint:*",
@@ -53,6 +55,7 @@
     "@types/uuid": "8.3.1",
     "@typescript-eslint/eslint-plugin": "4.28.1",
     "@typescript-eslint/parser": "4.28.1",
+    "chalk": "2.4.2",
     "eslint": "7.30.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
@@ -63,9 +66,11 @@
     "jest-preset-angular": "9.0.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.3.2",
+    "replace-in-file": "6.2.0",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "yargs": "17.0.1"
   },
   "engines": {
     "node": "12.18.3",
