--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "lint:html": "htmlhint \"src/**/*.html\" --nocolor",
     "lint:scss": "stylelint \"src/**/*.scss\" -f verbose --fix",
     "lint:ts": "ng lint --fix",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -50,6 +53,7 @@
     "@angular/cli": "13.1.2",
     "@angular/compiler-cli": "13.1.1",
     "@angular/language-service": "13.1.1",
+    "@cypress/schematic": "^1.6.0",
     "@types/jest": "27.4.0",
     "@types/node": "12.20.15",
     "@types/uuid": "8.3.3",
@@ -71,7 +75,8 @@
     "stylelint": "14.2.0",
     "stylelint-config-standard-scss": "3.0.0",
     "typescript": "4.5.4",
-    "yargs": "17.3.1"
+    "yargs": "17.3.1",
+    "cypress": "latest"
   },
   "engines": {
     "node": "16.13.1",
