--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contacts",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -18,6 +18,7 @@
     "lint:ts": "ng lint --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "e2e": "ng e2e",
+    "e2e:headless": "ng e2e --headless --watch false",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
   },
