--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:ts": "ng lint --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "e2e": "ng e2e",
-    "e2e:headless": "ng e2e --headless --watch false",
+    "e2e:headless": "percy exec -- ng e2e --headless --watch false",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
   },
@@ -55,6 +55,8 @@
     "@angular/compiler-cli": "13.1.1",
     "@angular/language-service": "13.1.1",
     "@cypress/schematic": "^1.6.0",
+    "@percy/cli": "1.0.0-beta.71",
+    "@percy/cypress": "3.1.1",
     "@types/jest": "27.4.0",
     "@types/node": "12.20.15",
     "@types/uuid": "8.3.3",
@@ -62,6 +64,7 @@
     "@typescript-eslint/parser": "5.9.0",
     "chalk": "4.1.2",
     "conventional-changelog-cli": "2.2.2",
+    "cypress": "latest",
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
@@ -76,8 +79,7 @@
     "stylelint": "14.2.0",
     "stylelint-config-standard-scss": "3.0.0",
     "typescript": "4.5.4",
-    "yargs": "17.3.1",
-    "cypress": "latest"
+    "yargs": "17.3.1"
   },
   "engines": {
     "node": "16.13.1",
