feat: add cypress image snapshot

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@cypress/schematic": "^1.6.0",
     "@percy/cli": "1.0.0-beta.71",
     "@percy/cypress": "3.1.1",
+    "@types/cypress-image-snapshot": "3.1.6",
     "@types/jest": "27.4.0",
     "@types/node": "12.20.15",
     "@types/uuid": "8.3.3",
@@ -65,6 +66,7 @@
     "chalk": "4.1.2",
     "conventional-changelog-cli": "2.2.2",
     "cypress": "latest",
+    "cypress-image-snapshot": "4.0.1",
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
