--- a/angular.json
+++ b/angular.json
@@ -124,8 +124,8 @@
           "builder": "@cypress/schematic:cypress",
           "options": {
             "devServerTarget": "contacts:serve",
-            "watch": true,
-            "headless": false
+            "watch": false,
+            "headless": true
           },
           "configurations": {
             "production": {
