--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "lint:ts": "ng lint --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "e2e": "ng e2e",
-    "e2e:headless": "percy exec -- ng e2e --headless --watch false",
-    "e2e:visual": "ng e2e --headless --watch false --spec cypress/integration/visual.spec.ts",
+    "e2e:visual": "ng e2e --spec cypress/integration/visual.spec.ts",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "cypress:run:visual": "cypress run --spec cypress/integration/visual.spec.ts",
+    "cypress:run:visual:update": "cypress run --spec cypress/integration/visual.spec.ts --env updateSnapshots=true"
   },
   "private": true,
   "dependencies": {
