feat: add scss attribute sorting to prettier

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postbuild:replace": "node ./tools/node/replace.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "format": "prettier -w \"src/**/*.{html,scss,ts}\"",
     "lint": "npm-run-all --parallel lint:*",
     "lint:html": "htmlhint \"src/**/*.html\" --nocolor",
     "lint:scss": "stylelint \"src/**/*.scss\" -f verbose --fix",
@@ -79,7 +80,9 @@
     "jest": "27.4.5",
     "jest-preset-angular": "11.0.1",
     "npm-run-all": "4.1.5",
+    "postcss": "8.4.5",
     "prettier": "2.5.1",
+    "prettier-plugin-css-order": "1.1.0",
     "replace-in-file": "6.3.2",
     "stylelint": "14.2.0",
     "stylelint-config-standard-scss": "3.0.0",
