--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,14 @@
           }
         ],
         "@typescript-eslint/member-ordering": "warn",
-        "lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }]
+        "lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
+        "padding-line-between-statements": [
+          "error",
+          { "blankLine": "always", "prev": "*", "next": "return" },
+          { "blankLine": "always", "prev": ["const", "let", "var"], "next": "*" },
+          { "blankLine": "any", "prev": ["const", "let", "var"], "next": ["const", "let", "var"] }
+        ],
+        "no-console": ["error", { "allow": ["warn", "error"] }]
       }
     }
   ]
